--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,3 +1,4 @@
+<!-- START:head -->
 <!DOCTYPE html>
 <html>
 <head>
@@ -7,18 +8,30 @@
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
 </head>
+<!-- END:head -->
 <body class="<%= controller.controller_name %>">
+<!-- START:i18n -->
   <div id="banner">
+    <%= form_tag store_path, class: 'locale' do %>
+      <%= select_tag 'set_locale', 
+        options_for_select(LANGUAGES, I18n.locale.to_s),
+        onchange: 'this.form.submit()' %>
+      <%= submit_tag 'submit' %>
+      <%= javascript_tag "$('.locale input').hide()" %>
+    <% end %>
     <%= image_tag("logo.png") %>
     <%= @page_title || t('.title') %>
   </div>
+<!-- END:i18n -->
   <div id="columns">
     <div id="side">
+      <!-- START:hidden_div -->
       <% if @cart %>
         <%= hidden_div_if(@cart.line_items.empty?, id: 'cart') do %>
           <%= render @cart %>
         <% end %>
       <% end %>
+    <!-- END:hidden_div -->
 
       <ul>
         <li><a href="http://www...."><%= t('.home') %></a></li>
